style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto Condensed', sans-serif;
    
}

body {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

#frente {
    margin-top: 10px;
}

h1 {
    font-size: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
}
h1, span {
    display: flex;
    justify-content: center;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    max-width: 370px;
    height: calc(198px + 30px);
    
    margin: 0 auto;
    margin-top: 10px;
    padding: 10px 10px 0px 10px;

    border: #FABD14 5px solid;
    border-radius: 20px;
}

.container div {
    margin: 0 30px;
}

.content {
    display: flex;
    align-items: center;
}

.logo .image {
    height: 85px;
    width: calc(100px * 2);
    margin-left: -85px;
}

.logo-txt {
    font-size: 10px;
    font-weight: bold;
    margin-left: -135px;
}

.form {
    margin-top: 50px;
}

.form input {
    all: initial;
    font-family: 'Roboto Condensed', sans-serif;
    font-weight: bold;
    width: 250px;
    text-transform: uppercase;
    padding-left: 3px;

    border: solid 1px #D3D3D3;
}
#password {
    text-transform: none;
}

.yellow {
    display: flex;
    color: #FABD14;
    font-weight: bold;
    margin-bottom: 5px;
    justify-content: space-between;
}

/* Segundo container  */

.icon {
    width: 50px;
    height: 95px;
}

button {
    background-color: #ffffff;
    padding: 6px 12px;
    border: 2px transparent solid;
    border-radius: 4px; 
    cursor: pointer;

    display: flex;
    align-items: center;
    justify-content: center;

    height: 30px;
    width: 30px;

    margin: 2px auto -2px auto;
}

button:hover{
    transition: 0.5s;
    border: 2px #FABD14 solid;
}

button img {
    height: 20px;
    width: 20px;
}

footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    text-align: center;
    margin: 0 0 10px 0;
    font-size: 10px;
}

.social-list {
    display: flex;
    justify-items: center;
    justify-content: center;
    list-style: none;
    align-items: center;
}

@media screen and (max-height: 768px) {
    h1 {
        display: flex;
        align-items: center;
        margin-left: 10px;
    }
  }

@media print {
    body {
        margin-top: 200px;
    }

    .form input {
        border: solid 1px white;
    }

    footer {
        display: none;
    }

    .yellow {
        justify-content: flex-start;
    }

    button {
        display: none;
        border: none;
    }

    button img {
        display: none;
    }
}

